<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epigraphics</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">Import</string>
    <string name="action_edit">Edit Note</string>
    <string name="title_activity_file_system">FileSystem</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_note_view">Note</string>
    <string name="title_activity_metadata_edit">Edit Metadata</string>
    <string name="setting1">Setting 1:</string>
    <string name="setting2">Setting 2:</string>
    <string name="setting3">Setting 3:</string>
    <string name="setting4">Setting 4:</string>
    <string name="setting5">Setting 5:</string>
    <string name="setting6">Setting 6:</string>
    <string name="setting7">Setting 7:</string>
    <string name="setting8">Setting 8:</string>
    <string name="title_activity_demo">Semanter</string>
    <string name="title_activity_navigator">Semanter</string>

</resources>
