<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="graphics.epi.MetadataEditActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <TableLayout android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TableRow android:id="@+id/row1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting1"
                    android:id="@+id/textView1"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText1"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row2"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting2"
                    android:id="@+id/textView2"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting3"
                    android:id="@+id/textView3"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row4"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting4"
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row5"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting5"
                    android:id="@+id/textView5"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row6"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting6"
                    android:id="@+id/textView6"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row7"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting7"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText7"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>
            <TableRow android:id="@+id/row8"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting8"
                    android:id="@+id/textView"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:width="100dp"
                    android:height="40dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:width="280dp" />


            </TableRow>

            <TableRow
                android:id="@+id/buttonRow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Done"
                    android:id="@+id/button"
                    android:layout_span="2"
                    android:onClick="saveSettings" />
            </TableRow>


        </TableLayout>
    </ScrollView>

</RelativeLayout>